# android-wayland-apps

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DESIGN.md  FAKECHROOT_HYBRID.md  GPU_RENDERING.md  PLAN.md  README.md  adb_runas.sh  build-libhybris.sh  build-proot.sh  build.rs  build.sh  bwrap-shim.py  flatpak-spawn-shim.sh  manifest.yaml  proot-config.json  run.sh  screenshot.sh
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/src/main/: AndroidManifest.xml
gbm-shim/: gbm_proxy.c
hybris-vulkan-icd/: android-config.h  android-version.h  build.sh  hybris_vulkan_icd.json  vulkan_hybris_icd.c
hybris-vulkan-icd/cutils/: native_handle.h
hybris-vulkan-icd/hardware/: hardware.h
kgsl_shim/: drm_shim.rs  kgsl_shim.c
libs/arm64-v8a-linux/: libhybris-common.so.1.0.0
minigbm/: Cargo.toml  build.rs
minigbm/csrc/: gbm_ahb.c  gbm_ahb.h
minigbm/src/: lib.rs
patches/: mesa-adreno830-chipid.patch  mesa-wsi-gbm-proxy.patch  mesa-zink-wayland-fallback.patch
patches/ndk-sys/: Cargo.toml  generate_bindings.sh
patches/ndk-sys/src/: ffi_aarch64.rs  ffi_arm.rs  ffi_i686.rs  ffi_x86_64.rs
pipewire-audio/: Cargo.toml
pipewire-audio/src/: aaudio.rs  lib.rs  ring_buffer.rs  stream.rs
pipewire-cam/: Cargo.toml
pipewire-cam/src/: ffi.rs  lib.rs  spa_pod.rs  stream.rs
scripts/: build-pipewire.sh
src/: lib.rs
src/android/: app.rs  audio.rs  camera.rs  jni_exports.rs  main.rs  portal.rs  window_manager.rs
src/android/backend/: ahb_allocator.rs  egl.rs  event_centralizer.rs  event_handler.rs  gbm_server.rs  ime.rs  input.rs  keymap.rs  mod.rs  render.rs  surface_transaction.rs  vulkan_renderer.rs
src/android/compositor/: bind.rs  mod.rs  text_input.rs
src/android/proot/: app_compat.rs  launch.rs  mod.rs  process.rs  services.rs  setup.rs
src/core/: config.rs
src/linux/: v4l2_shim.c
(+35 files in other folders)
