[package]
name = "android-wayland-launcher"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = { version = "0.14", default-features = false }
winit = { version = "0.31.0-beta.2", features = [
    "android-native-activity",
    "wayland",
] }
wayland-protocols = "0.32.6"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.8.6"
jni = "0.21.1"
smithay = { version = "0.7.0", default-features = false, features = [
    "wayland-protocols",
    "wayland-server",
    "renderer_glow",
    "wayland_frontend",
] }

[dependencies]
anyhow = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"

[patch.crates-io]
smithay = { path = "patches/smithay" }
winit = { path = "patches/winit/winit" }