[package]
name = "android-wayland-launcher"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = { version = "0.14", default-features = false }
raw-window-handle = { version = "0.6", features = ["std"] }
wayland-protocols = "0.32.6"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.8.6"
jni = "0.21.1"
libc = "0.2"
smithay = { version = "0.7.0", default-features = false, features = [
    "desktop",
    "wayland-protocols",
    "wayland-server",
    "renderer_glow",
    "wayland_frontend",
] }
ureq = "2"
tar = "0.4"
xz2 = "0.1"
pathdiff = "0.2"

[patch.crates-io]
smithay = { path = "patches/smithay" }